# litevec

./: README.md  pyproject.toml  requirements.txt
cli/: main.py
examples/: bench.py  demo.py  pdf_search.py
tests/: test_client.py  test_embedder.py  test_filter.py  test_metrics.py  test_stores.py
utils/: pdf_loader.py
vector_db/: __init__.py  api.py  client.py  embedder.py  exceptions.py  filter.py  metrics.py  setup.py  store.py
vector_db/examples/: demo.py
vector_db/store/: __init__.py  annoy_store.py  base.py  faiss_store.py  hnsw_store.py  memory.py  persistence.py
vector_db/tests/: test_store.py
